--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3062,7 +3062,7 @@ form > .fields > .field.quarter {
 	.image.right {
 		float: none;
 		max-width: 100%;
-		margin: 1rem 0;
+		margin: 1.5rem 0 0 0;
 	}
 
 	.image.left img,
@@ -3185,6 +3185,7 @@ form > .fields > .field.quarter {
 				}
 		
 				.product-content h3 {
+					margin-top: 0.5rem;
 					margin-bottom: 0.5rem;
 				}
 		
@@ -3656,6 +3657,7 @@ section {
 		/* New class to override top margin */
 		.product-wrapper h2.no-top-margin {
 			margin-top: 0;
+			margin-bottom: 0;
 
 		}
 	
